@@ -1,5 +1,6 @@
 
 5.2a2 -> 5.2a3:
+    - jbj: rpmz: stub in RPMZ envvar option processing.
     - jbj: fix: eliminate a argvSplit() memory leak.
     - jbj: rpmz: gather args from multiple manifests (ala rpmwget).
     - jbj: rpmz: stub in --files manifest handling (ignore --files0 for now).
